Escolhidas as cores. Criada a estrutura de layout

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Curriculo Allan Cicceri</title>
 </head>
 <body>
-    teste
+    <div class="container-esquerda">
+
+    </div>
+    <div class="container-principal">
+
+    </div>
     
 </body>
 </html>
