Adicionada imagem e contatos]

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div class="container-esquerda">
-
+        <div class="container-img">
+            <img src="./assets/imgs/allan.webp" alt="">
+        </div>
+        <div class="container-contato">
+            <div>allan-cicceri-b88a052a3</div>
+            <div>github.com/AllanCicceri</div>
+            <div>allan.cicceri@gmail.com</div>
+            <div>(51) 99543-6969</div>
+        </div>
     </div>
     <div class="container-principal">
 
