Adicionado icones aos contatos e ajustado para que linkedin e github sejam links

--- a/index.html
+++ b/index.html
@@ -12,10 +12,22 @@
             <img src="./assets/imgs/allan.webp" alt="">
         </div>
         <div class="container-contato">
-            <div>allan-cicceri-b88a052a3</div>
-            <div>github.com/AllanCicceri</div>
-            <div>allan.cicceri@gmail.com</div>
-            <div>(51) 99543-6969</div>
+            <div class="contato">
+                <img src="./assets/imgs/email.png" alt="">
+                <div>allan.cicceri@gmail.com</div>
+            </div>
+            <div class="contato">
+                <img src="./assets/imgs/whats.png" alt="">
+                <div>(51) 99543-6969</div>
+            </div>
+            <div class="contato">
+                <img src="./assets/imgs/linkedin.png" alt="">
+                <a href="https://www.linkedin.com/in/allan-cicceri-b88a052a3/">Linkedin</a>
+            </div>
+            <div class="contato">
+                <img src="./assets/imgs/git.png" alt="">
+                <a href="https://www.github.com/AllanCicceri">Github</a>
+            </div>
         </div>
     </div>
     <div class="container-principal">
